[package]
name = "obzcpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon="1.5.1"
#lazy_static="1.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = 'fat'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1